# rs-odoo-rpc

./: Cargo.toml
examples/: example_01.rs
src/: client.rs  lib.rs  types.rs
