[package]
name = "odoorpc"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "=0.10.60", features = ["vendored"] }
openssl-sys = { version = "=0.9.96" }
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
