[package]
name = "odoorpc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
