[package]
name = "odoorpc"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
h2 = "~0.3.24"
mio = "~0.8.11"
